# toucan_ecs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
benches/: basic.rs  view.rs  world.rs
benches/components/: mod.rs
benches/resources/: mod.rs
examples/life/: field.rs  main.rs  print.rs  utils.rs
src/: component.rs  entity.rs  error.rs  lib.rs  macros.rs  prelude.rs  ref_kind.rs  type_id.rs
src/component/: entry.rs  marker.rs  mod.rs  pool.rs  query.rs  refs.rs  registry.rs  registry_refs.rs  set.rs  type_id.rs  view_one.rs  viewable.rs
src/component/fetch/: mod.rs  not.rs  not_mut.rs  option_read.rs  option_read_mut.rs  option_write.rs  option_write_mut.rs  read.rs  read_mut.rs  write.rs  write_mut.rs
src/component/pool/: component_pool.rs  mod.rs  pool.rs
src/component/set/: mod.rs  tuple.rs
src/component/storage/: default.rs  erased.rs  holder.rs  impls.rs  mod.rs  traits.rs
src/component/storage/holder/: erased.rs  holdable.rs  impls.rs  mod.rs
src/entity/: add_set.rs  builder.rs  entities.rs  entry.rs  fetch.rs  manager.rs  mod.rs  query.rs  refs.rs  registry.rs  view.rs  view_one.rs  viewable.rs
src/entity/fetch/: entity.rs  mod.rs  not.rs  option_read.rs  option_write.rs  read.rs  write.rs
src/entity/view/: mod.rs  one.rs  one_mut.rs  view.rs  view_one.rs
src/entity/view/fetch/: entity.rs  mod.rs  option_read.rs  option_write.rs  read.rs  tuple.rs  write.rs
src/entity/view/iter/: mod.rs  view.rs  view_one.rs
src/entity/view/viewable/: impls.rs  mod.rs  tuple.rs
src/fetch/: entity.rs  foreach_holder.rs  mod.rs  not.rs  option_read.rs  option_write.rs  read.rs  view.rs  view_mut.rs  view_one.rs  view_one_mut.rs  write.rs
src/marker/: component.rs  mod.rs  resource.rs
src/mutability_check/: checked.rs  impls.rs  mod.rs  mutability.rs  tuple.rs  type_id.rs
src/resource/: erased.rs  holder.rs  marker.rs  mod.rs  query.rs  refs.rs  registry.rs  registry_refs.rs  storage.rs  type_id.rs  viewable.rs
src/resource/fetch/: mod.rs  read.rs  read_mut.rs  write.rs  write_mut.rs
src/resource/set/: mod.rs  tuple.rs
src/system/: holder.rs  impls.rs  mod.rs  tuple.rs
src/system/fetch/: entity.rs  impls.rs  mod.rs  not.rs  option_read.rs  option_write.rs  read.rs  tuple.rs  view.rs  view_mut.rs  view_one.rs  view_one_mut.rs  write.rs
src/system/fetch/impls/: entity.rs  foreach_holder.rs  mod.rs  not.rs  option_read.rs  option_write.rs  read.rs  unit.rs  view.rs  view_mut.rs  view_one.rs  view_one_mut.rs  write.rs
src/system/foreach/: checked.rs  convert.rs  holder.rs  impls.rs  mod.rs  tuple.rs
src/system/foreach/fetch/: mod.rs  tuple.rs
src/system/foreach/query/: impls.rs  mod.rs  tuple.rs
src/system/query/: checked.rs  impls.rs  mod.rs  tuple.rs
src/system/schedule/: holder.rs  mod.rs
src/world/: components.rs  entry.rs  hash.rs  impls.rs  mod.rs  resources.rs  split.rs  view.rs  world_refs.rs
src/world/fetch/: error.rs  mod.rs  tuple.rs
src/world/query/: checked.rs  impls.rs  mod.rs  soundness_check.rs  tuple.rs
src/world/view/: entities.rs  mod.rs  view_mut.rs  view_one.rs  view_one_mut.rs  view_shared.rs
src/world/viewable/: mod.rs  tuple.rs
tests/: attach.rs  basic.rs  create.rs  destroy.rs  extend.rs  get.rs  registry.rs  remove.rs  system.rs  view.rs  view_mut.rs
tests/components/: mod.rs
tests/resources/: mod.rs
tests/utils/: mod.rs
toucan_ecs_derive/: Cargo.toml
toucan_ecs_derive/src/: lib.rs
toucan_ecs_macro/: Cargo.toml
toucan_ecs_macro/src/: derive.rs  lib.rs  proc.rs
(+30 files in other folders)
