[package]
name = "toucan_ecs"
version = "0.3.1"
description = "Simple and safe ECS library for Rust"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/toucan-rust/toucan_ecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toucan", "ecs", "entity"]
categories = ["data-structures", "game-engines"]
edition = "2021"

[dependencies]
slotmap = "1.0.6"
as-any = "0.3.0"
multimap = "0.8.3"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
crossterm = "0.23.2"

[lib]
bench = false

[[bench]]
name = "world"
harness = false

[[bench]]
name = "view"
harness = false

[features]
resource = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
