[package]
name = "toucan_ecs"
version = "0.3.1"
description = "Simple and safe ECS library for Rust"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/toucan-rust/toucan_ecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toucan", "ecs", "entity"]
categories = ["data-structures", "game-engines"]
edition = "2021"

[dependencies]
slotmap = "1.0.6"
as-any = "0.3.0"
multimap = { version = "0.8.3", default-features = false }
toucan_ecs_macro = { path = "toucan_ecs_macro" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
crossterm = "0.24.0"
rand = "0.8.5"

[lib]
bench = false

[[bench]]
name = "world"
harness = false

[[bench]]
name = "view"
harness = false

[[example]]
name = "life"
required-features = ["resource"]

[features]
default = ["resource"]
resource = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["resource"]
