[package]
name = "toucan_ecs_derive"
version = "0.1.0"
description = "Derive macros for `toucan_ecs` crate"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/toucan-rust/toucan_ecs"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
darling = "0.14.1"
syn = "1.0.98"
quote = "1.0.20"
